--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,18 @@
+# Do not put accents or special caracteres in this file
+# this will bug "docker compose up -d" : yaml: invalid trailing UTF-8 octet
+# No need network for services, Docker create a common one by default
 
 services:
+  web:
+    tty: true
+    build:
+      context: .
+      args:
+        USER_NAME: ${USER_NAME}
+        USER_ID: ${USER_ID}
+        GROUP_ID: ${GROUP_ID}
+    volumes:
+      - .:/var/www/
 ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
