--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -25,6 +25,13 @@ services:
       - "5432"
 ###< doctrine/doctrine-bundle ###
 
+  phpmyadmin:
+    ports:
+      - 8082:80
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.phpmyadmin.rule=Host(`phpmyadmin.localhost`)"
+
 ###> symfony/mailer ###
 #  mailer:
 #    image: axllent/mailpit
