feat(cover-letter): implement back-office controller, templates and styling (ref #3)

--- a/config/packages/symfonycasts_sass.yaml
+++ b/config/packages/symfonycasts_sass.yaml
@@ -3,6 +3,9 @@ symfonycasts_sass:
   root_sass:
     - '%kernel.project_dir%/assets/styles/app.scss'
 
+    - '%kernel.project_dir%/assets/styles/back/back_global.scss'
+    - '%kernel.project_dir%/assets/styles/back/back_cover_letter.scss'
+
   # The Sass binary to use
   binary: null
 
