chore(config): configure knpSnappy (ref #4)

--- a/.env
+++ b/.env
@@ -54,3 +54,8 @@ MARIADB_DATABASE_NAME=job_search
 MARIADB_ROOT_PASSWORD=root
 
 DATABASE_URL="mysql://root:${MARIADB_ROOT_PASSWORD}@database:3306/${MARIADB_DATABASE_NAME}?serverVersion=11.7.2-MariaDB&charset=utf8mb4"
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
