--- a/config/packages/symfonycasts_sass.yaml
+++ b/config/packages/symfonycasts_sass.yaml
@@ -6,6 +6,8 @@ symfonycasts_sass:
     - '%kernel.project_dir%/assets/styles/back/back_global.scss'
     - '%kernel.project_dir%/assets/styles/back/back_cover_letter.scss'
 
+    - '%kernel.project_dir%/assets/styles/front/front_cover_letter_template.scss'
+
   # The Sass binary to use
   binary: null
 
